# githop

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  release.yml
src/: app.rs  git.rs  main.rs  ui.rs
