[package]
name = "githop"
version = "0.1.1"
edition = "2021"
description = "A lightweight TUI for quick git branch operations"
license = "MIT"
repository = "https://github.com/tonegawa07/githop"
homepage = "https://github.com/tonegawa07/githop"
keywords = ["git", "branch", "tui", "terminal", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
